--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^7.1.1",
     "sockjs-client": "^1.6.1",
     "zustand": "^4.5.2"
   },
